the detailed page of the object has been made and adapted

--- a/dev/pages/detailed-card.html
+++ b/dev/pages/detailed-card.html
@@ -114,7 +114,7 @@
                     </div>
                 </div>
 
-                <section class="card-slider" data-product-card-slider="block-slider">
+                <section class="card-slider detailed-card-page__card-slider" data-product-card-slider="block-slider">
                     <div class="main-container max-width">
                         <div class="card-slider__block-head">
                             <h2 class="title-section title-reset">Similar objects</h2>
@@ -212,6 +212,8 @@
         <footer class="footer">
             @include('./include/layouts/footer.html')
         </footer>
+        @include('./include/modal-windows/m-image-gallary.html')
+        @include('./include/modal-windows/simple-info.html')
         @include('./include/layouts/scripts.html')
     </body>
 </html>
