made adaptive pages with real estate + start adaptive with real estate + map

--- a/dev/pages/developers.html
+++ b/dev/pages/developers.html
@@ -41,7 +41,7 @@
                                                         <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
                                                     </svg>
                                                 </button>
-                                                <div class="select__block-pop-up">
+                                                <div class="select__block-pop-up" data-scrollbar>
                                                     <ul class="select__list list-reset">
                                                         <li class="select__li">
                                                             <a href="#" class="select__link link-reset">Toronto</a>
