--- a/dev/pages/index.html
+++ b/dev/pages/index.html
@@ -24,6 +24,7 @@
             @include('./include/layouts/footer.html')
         </footer>
         @include('./include/components/compare-bar.html')
+        @include('./include/modal-windows/more-filters.html')
         @include('./include/modal-windows/m-delete-everything.html')
         @include('./include/layouts/scripts.html')
     </body>
