--- a/dev/pages/property-map.html
+++ b/dev/pages/property-map.html
@@ -129,6 +129,13 @@
                             <img src="./assets/images/for-sale-map.jpg" class="card-section__map-image" alt="">
                         </div>
                         <div class="card-section__inner-cards">
+                            <button class="card-section__btn-show-cards">
+                                <span class="card-section__show-cards-text">Show 98 objects</span>
+                                <svg class="card-section__show-cards-icon">
+                                    <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
+                                </svg>
+                                <span class="card-section__show-cards-decor"></span>
+                            </button>
                             <div class="card-section__wrapper-cards">
                                 @include('./include/components/product-card.html')
                                 @include('./include/components/product-card.html')
