--- a/dev/pages/developers.html
+++ b/dev/pages/developers.html
@@ -33,7 +33,7 @@
                                         <!-- Результаты поиска -->
                                     </div>
                                     <div class="search-bar__block-buttons">
-                                        <div class="select search-bar__select-residential" data-select="block-select">
+                                        <div class="select search-bar__select-city" data-select="block-select">
                                             <div class="select__inner">
                                                 <button type="button" class="select__btn" data-select="btn">
                                                     <span class="select__btn-text">City</span>
@@ -187,11 +187,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                
-                                @include('./include/components/text-block.html')
                             </div>
                             @include('./include/components/side-panel.html')
                         </div>
+                        @include('./include/components/text-block.html')
                     </div>
                 </section>
             </div>
