--- a/dev/pages/property-map.html
+++ b/dev/pages/property-map.html
@@ -33,7 +33,7 @@
                                         <!-- Результаты поиска -->
                                     </div>
                                     <div class="search-bar__block-buttons">
-                                        <div class="select search-bar__select-residential" data-select="block-select">
+                                        <div class="select search-bar__select-city" data-select="block-select">
                                             <div class="select__inner">
                                                 <button type="button" class="select__btn" data-select="btn">
                                                     <span class="select__btn-text">City</span>
@@ -41,7 +41,7 @@
                                                         <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
                                                     </svg>
                                                 </button>
-                                                <div class="select__block-pop-up">
+                                                <div class="select__block-pop-up" data-scrollbar>
                                                     <ul class="select__list list-reset">
                                                         <li class="select__li">
                                                             <a href="#" class="select__link link-reset">Toronto</a>
@@ -85,7 +85,7 @@
                                                         <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
                                                     </svg>
                                                 </button>
-                                                <div class="select__block-pop-up">
+                                                <div class="select__block-pop-up" data-scrollbar>
                                                     <ul class="select__list list-reset">
                                                         <li class="select__li">
                                                             <a href="#" class="select__link link-reset">Residential</a>
