--- a/dev/pages/search-result.html
+++ b/dev/pages/search-result.html
@@ -33,7 +33,7 @@
                                         <!-- Результаты поиска -->
                                     </div>
                                     <div class="search-bar__block-buttons">
-                                        <div class="select search-bar__select-residential" data-select="block-select">
+                                        <div class="select search-bar__select-city" data-select="block-select">
                                             <div class="select__inner">
                                                 <button type="button" class="select__btn" data-select="btn">
                                                     <span class="select__btn-text">City</span>
@@ -41,7 +41,7 @@
                                                         <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
                                                     </svg>
                                                 </button>
-                                                <div class="select__block-pop-up">
+                                                <div class="select__block-pop-up" data-scrollbar>
                                                     <ul class="select__list list-reset">
                                                         <li class="select__li">
                                                             <a href="#" class="select__link link-reset">Toronto</a>
@@ -85,7 +85,7 @@
                                                         <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
                                                     </svg>
                                                 </button>
-                                                <div class="select__block-pop-up">
+                                                <div class="select__block-pop-up" data-scrollbar>
                                                     <ul class="select__list list-reset">
                                                         <li class="select__li">
                                                             <a href="#" class="select__link link-reset">Residential</a>
@@ -137,35 +137,35 @@
                                 @include('./include/components/product-card.html')
                                 @include('./include/components/product-card.html')
                                 @include('./include/components/product-card.html')
-                            </div>
-                            @include('./include/components/side-panel.html')
-                        </div>
-                        <div class="card-section__block-nav">
-                            @include('./include/components/pagination.html')
-                            <div class="select select--size--sm select--theme--blue" data-select="block-select">
-                                <span class="select__signature">Show by</span>
-                                <div class="select__inner">
-                                    <button type="button" class="select__btn" data-select="btn">
-                                        <span class="select__btn-text">15</span>
-                                        <svg class="select__btn-icon">
-                                            <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
-                                        </svg>
-                                    </button>
-                                    <div class="select__block-pop-up">
-                                        <ul class="select__list list-reset">
-                                            <li class="select__li">
-                                                <a href="#" class="select__link link-reset">15</a>
-                                            </li>
-                                            <li class="select__li">
-                                                <a href="#" class="select__link link-reset">30</a>
-                                            </li>
-                                            <li class="select__li">
-                                                <a href="#" class="select__link link-reset">45</a>
-                                            </li>
-                                        </ul>
+                                <div class="card-section__block-nav">
+                                    @include('./include/components/pagination.html')
+                                    <div class="select select--size--sm select--theme--blue" data-select="block-select">
+                                        <span class="select__signature">Show by</span>
+                                        <div class="select__inner">
+                                            <button type="button" class="select__btn" data-select="btn">
+                                                <span class="select__btn-text">15</span>
+                                                <svg class="select__btn-icon">
+                                                    <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
+                                                </svg>
+                                            </button>
+                                            <div class="select__block-pop-up">
+                                                <ul class="select__list list-reset">
+                                                    <li class="select__li">
+                                                        <a href="#" class="select__link link-reset">15</a>
+                                                    </li>
+                                                    <li class="select__li">
+                                                        <a href="#" class="select__link link-reset">30</a>
+                                                    </li>
+                                                    <li class="select__li">
+                                                        <a href="#" class="select__link link-reset">45</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            @include('./include/components/side-panel.html')
                         </div>
                     </div>
                 </section>
