made a desktop of the detailed-card-developer and favorite-objects pages

--- a/dev/pages/_links.html
+++ b/dev/pages/_links.html
@@ -12,49 +12,52 @@
         </div>
 
         <div class="dev__box">
-            <a href="./index.html" class="dev__link link-reset">Главная (Home)</a>
+            <a href="./index.html" class="dev__link link-reset desktop mobile">Главная (Home)</a>
         </div>
         <div class="dev__box">
-            <a href="./property.html" class="dev__link link-reset">Недвижимость (Property)</a>
+            <a href="./property.html" class="dev__link link-reset desktop mobile">Недвижимость (Property)</a>
         </div>
         <div class="dev__box">
-            <a href="./property-map.html" class="dev__link link-reset">Недвижимость на карте (Real estate on the map)</a>
+            <a href="./property-map.html" class="dev__link link-reset desktop mobile">Недвижимость на карте (Real estate on the map)</a>
         </div>
         <div class="dev__box">
-            <a href="./detailed-card.html" class="dev__link link-reset">Детальная карточка объекта (Detailed map of the object)</a>
+            <a href="./detailed-card.html" class="dev__link link-reset desktop mobile">Детальная карточка объекта (Detailed map of the object)</a>
         </div>
         <div class="dev__box">
-            <a href="./detailed-card-developer.html" class="dev__link link-reset">Детальная карточка застройщика (Detailed card of the developer)</a>
+            <a href="./detailed-card-developer.html" class="dev__link desktop link-reset">Детальная карточка застройщика (Detailed card of the developer)</a>
         </div>
         <div class="dev__box">
-            <a href="./developers.html" class="dev__link link-reset">Застройщики (Developers)</a>
+            <a href="./developers.html" class="dev__link link-reset desktop mobile">Застройщики (Developers)</a>
+        </div> 
+        <div class="dev__box">
+            <a href="./favorite-objects.html" class="dev__link link-reset desktop">Любимые объекты (Favorite objects)</a>
         </div>
         <div class="dev__box">
-            <a href="./search-result.html" class="dev__link link-reset">По запросу есть результаты (Search result)</a>
+            <a href="./search-result.html" class="dev__link link-reset desktop mobile">По запросу есть результаты (Search result)</a>
         </div>
         <div class="dev__box">
-            <a href="./search-no-result.html" class="dev__link link-reset">По запросу ничего не найдено (Search no result)</a>
+            <a href="./search-no-result.html" class="dev__link link-reset desktop mobile">По запросу ничего не найдено (Search no result)</a>
         </div>
         <div class="dev__box">
-            <a href="./404.html" class="dev__link link-reset">Страница не найдена (404)</a>
+            <a href="./404.html" class="dev__link link-reset desktop mobile">Страница не найдена (404)</a>
         </div>
         <div class="dev__box">
-            <a href="./privacy-policy.html" class="dev__link link-reset">Политика конфиденциальности (Privacy policy)</a>
+            <a href="./privacy-policy.html" class="dev__link link-reset desktop mobile">Политика конфиденциальности (Privacy policy)</a>
         </div>
         <div class="dev__box">
-            <a href="./terms-of-use.html" class="dev__link link-reset">Условия использования (Terms of use)</a>
+            <a href="./terms-of-use.html" class="dev__link link-reset desktop mobile">Условия использования (Terms of use)</a>
         </div>
         <div class="dev__box">
             <a href="#" class="dev__link link-reset" data-modal-link="#more-filters">Модальное окно "Фильтр" (Filter)</a>
         </div>
         <div class="dev__box">
-            <a href="#" class="dev__link link-reset" data-modal-link="#m-interested-in-buying-a-home">Модальное окно "Заинтересованы в покупке дома?" (Interested in Buying a Home?)</a>
+            <a href="#" class="dev__link link-reset desktop" data-modal-link="#m-interested-in-buying-a-home">Модальное окно "Заинтересованы в покупке дома?" (Interested in Buying a Home?)</a>
         </div>
         <div class="dev__box">
-            <a href="#" class="dev__link link-reset" data-modal-link="#m-request-Info">Модальное окно "Запросить информацию" (Request Info)</a>
+            <a href="#" class="dev__link link-reset desktop" data-modal-link="#m-request-Info">Модальное окно "Запросить информацию" (Request Info)</a>
         </div>
         <div class="dev__box">
-            <a href="#" class="dev__link link-reset" data-modal-link="#simple-info">Модальное окно "Менеджер свяжется с вами в ближайшее время" (The manager will contact you shortly)</a>
+            <a href="#" class="dev__link link-reset desktop" data-modal-link="#simple-info">Модальное окно "Менеджер свяжется с вами в ближайшее время" (The manager will contact you shortly)</a>
         </div>
         <!-- <div class="dev__box">
             <a href="./_components.html" class="dev__link link-reset">Компоненты</a>
