the page about the developer has been compiled and adapted + the desktop has been made and the comparison page has almost been adapted

--- a/dev/pages/_links.html
+++ b/dev/pages/_links.html
@@ -24,13 +24,22 @@
             <a href="./detailed-card.html" class="dev__link link-reset desktop mobile">Детальная карточка объекта (Detailed map of the object)</a>
         </div>
         <div class="dev__box">
-            <a href="./detailed-card-developer.html" class="dev__link desktop link-reset">Детальная карточка застройщика (Detailed card of the developer)</a>
+            <a href="./detailed-card-developer.html" class="dev__link link-reset desktop mobile ">Детальная карточка застройщика (Detailed card of the developer)</a>
+        </div>
+        <div class="dev__box">
+            <a href="./about-developer.html" class="dev__link link-reset">О застройщеке (About the developer)</a>
         </div>
         <div class="dev__box">
             <a href="./developers.html" class="dev__link link-reset desktop mobile">Застройщики (Developers)</a>
+        </div>
+        <div class="dev__box">
+            <a href="./compare.html" class="dev__link link-reset desktop">Сравнение (Compare)</a>
         </div> 
         <div class="dev__box">
-            <a href="./favorite-objects.html" class="dev__link link-reset desktop">Любимые объекты (Favorite objects)</a>
+            <a href="./favorite-objects.html" class="dev__link link-reset desktop mobile">Избранные объекты (Favorite objects)</a>
+        </div>
+        <div class="dev__box">
+            <a href="./no-favorite-objects.html" class="dev__link link-reset desktop mobile">Нет избранных объектов (No favorite objects)</a>
         </div>
         <div class="dev__box">
             <a href="./search-result.html" class="dev__link link-reset desktop mobile">По запросу есть результаты (Search result)</a>
