--- a/dev/pages/favorite-objects.html
+++ b/dev/pages/favorite-objects.html
@@ -22,6 +22,26 @@
                                 <h2 class="title-section title-reset active">Favorite objects</h2>
                                 <h2 class="title-section title-reset">Residential complexes</h2>
                             </div>
+                            <div class="select" data-select="block-select">
+                                <div class="select__inner">
+                                    <button type="button" class="select__btn" data-select="btn">
+                                        <span class="select__btn-text">Favorite objects</span>
+                                        <svg class="select__btn-icon">
+                                            <use xlink:href="./assets/icons/sprite-svg.svg#arrow-down"></use>
+                                        </svg>
+                                    </button>
+                                    <div class="select__block-pop-up" data-scrollbar>
+                                        <ul class="select__list list-reset">
+                                            <li class="select__li active">
+                                                <a href="#" class="select__link link-reset">Favorite objects</a>
+                                            </li>
+                                            <li class="select__li">
+                                                <a href="#" class="select__link link-reset">Residential complexes</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="card-section__block-head-btns">
                                 <button type="button" class="btn btn--size-sm btn--theme--light-blue">
                                     <svg class="btn__icon">
