--- a/dev/pages/compare.html
+++ b/dev/pages/compare.html
@@ -544,7 +544,7 @@
                                     <div class="compare-page__block-feature-head" data-compare-page="block-feature-head">
                                         <h4 class="title-section title-reset">Basic properties</h4>
                                     </div>
-                                    <ul class="compare-page__list-feature list-reset" data-compare-page="list-feature">
+                                    <ul class="compare-page__list-feature list-reset" data-compare-page="list-feature" data-compare-page-count="1">
                                         <li class="compare-page__li-feature">
                                             <span class="compare-page__text-feature">Gross m²</span>
                                         </li>
@@ -566,7 +566,7 @@
                                     <div class="compare-page__block-feature-head" data-compare-page="block-feature-head">
                                         <h4 class="title-section title-reset">Property Details</h4>
                                     </div>
-                                    <ul class="compare-page__list-feature list-reset" data-compare-page="list-feature">
+                                    <ul class="compare-page__list-feature list-reset" data-compare-page="list-feature" data-compare-page-count="3">
                                         <ul class="compare-page__list-feature list-reset">
                                             <li class="compare-page__li-feature">
                                                 <span class="compare-page__text-feature">Gross m²</span>
