--- a/dev/pages/property.html
+++ b/dev/pages/property.html
@@ -117,6 +117,7 @@
                                         </a>
                                     </div>
                                 </div>
+                                @include('./include/components/tags.html')
                             </div>
                             <div class="card-section__block-sorting">
                                 @include('./include/ui/count-objects.html')
