--- a/dev/pages/_links.html
+++ b/dev/pages/_links.html
@@ -24,16 +24,16 @@
             <a href="./detailed-card.html" class="dev__link link-reset desktop mobile">Детальная карточка объекта (Detailed map of the object)</a>
         </div>
         <div class="dev__box">
-            <a href="./detailed-card-developer.html" class="dev__link link-reset desktop mobile ">Детальная карточка застройщика (Detailed card of the developer)</a>
+            <a href="./detailed-card-developer.html" class="dev__link link-reset desktop mobile">Детальная карточка застройщика (Detailed card of the developer)</a>
         </div>
         <div class="dev__box">
-            <a href="./about-developer.html" class="dev__link link-reset">О застройщеке (About the developer)</a>
+            <a href="./about-developer.html" class="dev__link link-reset desktop mobile">О застройщеке (About the developer)</a>
         </div>
         <div class="dev__box">
             <a href="./developers.html" class="dev__link link-reset desktop mobile">Застройщики (Developers)</a>
         </div>
         <div class="dev__box">
-            <a href="./compare.html" class="dev__link link-reset desktop">Сравнение (Compare)</a>
+            <a href="./compare.html" class="dev__link link-reset desktop mobile">Сравнение (Compare)</a>
         </div> 
         <div class="dev__box">
             <a href="./favorite-objects.html" class="dev__link link-reset desktop mobile">Избранные объекты (Favorite objects)</a>
@@ -57,16 +57,40 @@
             <a href="./terms-of-use.html" class="dev__link link-reset desktop mobile">Условия использования (Terms of use)</a>
         </div>
         <div class="dev__box">
-            <a href="#" class="dev__link link-reset" data-modal-link="#more-filters">Модальное окно "Фильтр" (Filter)</a>
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#more-filters">Модальное окно "Фильтр" (Filter)</a>
         </div>
         <div class="dev__box">
-            <a href="#" class="dev__link link-reset desktop" data-modal-link="#m-interested-in-buying-a-home">Модальное окно "Заинтересованы в покупке дома?" (Interested in Buying a Home?)</a>
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#m-interested-in-buying-a-home">Модальное окно "Заинтересованы в покупке дома?" (Interested in Buying a Home?)</a>
         </div>
         <div class="dev__box">
-            <a href="#" class="dev__link link-reset desktop" data-modal-link="#m-request-Info">Модальное окно "Запросить информацию" (Request Info)</a>
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#m-request-Info">Модальное окно "Запросить информацию" (Request Info)</a>
         </div>
         <div class="dev__box">
-            <a href="#" class="dev__link link-reset desktop" data-modal-link="#simple-info">Модальное окно "Менеджер свяжется с вами в ближайшее время" (The manager will contact you shortly)</a>
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#simple-info">Модальное окно "Менеджер свяжется с вами в ближайшее время" (The manager will contact you shortly)</a>
+        </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#m-thanks-feedback">Модальное окно "Спасибо за ваш отзыв!" (Thanks for your feedback!)</a>
+        </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#do-you-need-expert-help">Модальное окно "Вам нужна квалифицированная помощь?" (Do you need expert help?)</a>
+        </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#object-added-to-favorites">Модальное окно "Объект, добавленный в избранное" (Object added to favorites)</a>
+        </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#how-would-you-rate-our-website">Модальное окно "Как бы вы оценили наш веб-сайт?" (How would you rate our website?)</a>
+        </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#m-delete-everything">Модальное окно "Вы уверены, что хотите все удалить?" (Are you sure you want to delete everything?)</a>
+        </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#m-get-brochure">Модальное окно "Получите брошюру" (Get a brochure)</a>
+        </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#m-request-quote">Модальное окно "Запросите ценовое предложение" (Request a quote)</a>
+        </div>
+        <div class="dev__box">
+            <a href="#" class="dev__link link-reset desktop mobile" data-modal-link="#m-share-your-impressions">Модальное окно "Поделитесь своими впечатлениями" (Share your impressions)</a>
         </div>
         <!-- <div class="dev__box">
             <a href="./_components.html" class="dev__link link-reset">Компоненты</a>
@@ -95,6 +119,14 @@
     @include('./include/modal-windows/simple-info.html')
     @include('./include/modal-windows/m-interested-in-buying-a-home.html')
     @include('./include/modal-windows/m-request-Info.html')
+    @include('./include/modal-windows/m-do-you-need-expert-help.html')
+    @include('./include/modal-windows/m-object-added-to-favorites.html')
+    @include('./include/modal-windows/m-site-evaluation.html')
+    @include('./include/modal-windows/m-delete-everything.html')
+    @include('./include/modal-windows/m-get-brochure.html')
+    @include('./include/modal-windows/m-request-quote.html')
+    @include('./include/modal-windows/m-thanks-feedback.html')
+    @include('./include/modal-windows/m-share-your-impressions.html')
     @include('./include/layouts/scripts.html')
 </body>
 </html>
